# stftPitchShift

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Cepstrum.py  Config.cmake.in  IO.cpp  IO.h  LICENSE  Makefile  Pitcher.cpp  Pitcher.h  Pitcher.py  README.md  Resampler.cpp  Resampler.h  Resampler.py  STFT.cpp  STFT.h  STFT.py  Timer.h  Vocoder.cpp  Vocoder.h  Vocoder.py  compare.py  debian.sh  example.py  hpss.py  main.cpp  main.py  setup.cfg  smbPitchShift.cpp  stftpitchshift.bat  stftpitchshift.py  stftpitchshift.sh  ubuntu.sh  version.py  version.sh  voice.aif
.github/workflows/: build-deb-package.yml  cpp.yml  publish-to-pypi.yml  python.yml
anyoption/: CMakeLists.txt  LICENSE  README  anyoption.cpp
cpp/: CMakeLists.txt  Cepstrum.cpp  LibStftPitchShift.cmake  TheStftPitchShift.cmake  Timer.h  main.cpp
cpp/StftPitchShift/: Arctangent.h  BrewStftPitchShift.cmake  CLI.h  Cepster.cpp  Cepster.h  Cepstrum.cpp  Cepstrum.h  ConfigStftPitchShift.cmake  ConfigStftPitchShift.cmake.template  DebStftPitchShift.cmake  Dump.h  ETC.h  FFT.h  IO.cpp  IO.h  LibStftPitchShift.cmake  LibStftPitchShiftVcpkg.cmake  Normalizer.h  Pitcher.cpp  Pitcher.h  RFFT.h  Resampler.cpp  Resampler.h  SDFT.h  STFT.cpp  STFT.h  StftPitchShift.cpp  StftPitchShift.h  StftPitchShiftCore.h  StftPitchShiftDeb.cmake  StftPitchShiftMode.h  TheStftPitchShift.cmake  Timer.h  VcpkgStftPitchShift.cmake  Version.h  Vocoder.cpp  Vocoder.h  WasmStftPitchShift.cmake  main.cpp  wasm.cpp
cpp/StftPitchShift/anyoption/: CMakeLists.txt  anyoption.h
cpp/StftPitchShift/cxxopts/: CMakeLists.txt  README
cpp/StftPitchShift/dr_libs/: CMakeLists.txt  README  dr_wav.h
cpp/StftPitchShift/pocketfft/: CMakeLists.txt  README
cpp/StftPitchShift/smb/: CMakeLists.txt  smbPitchShift.cpp  smbPitchShift.h
cpp/anyoption/: README
cpp/pocketfft/: CMakeLists.txt
cpp/smb/: CMakeLists.txt
debian/: changelog.template  control.template  rules  rules.template
dr_libs/: CMakeLists.txt  README  VERSION
examples/: CMakeLists.txt  example.cmake  example.cpp  example.py  ife.py  realtime.cpp
homebrew/: stftpitchshift.rb
pocketfft/: README  VERSION
python/: IO.py  STFT.py  Vocoder.py  main.py
python/StftPitchShift/: IO.py  Pitcher.py  Resampler.py  StftPitchShift.py  __init__.py  main.py
python/stftpitchshift/: __init__.py  main.py  normalizer.py  pitcher.py  plot.py  resampler.py  sdft.py  stft.py  stftpitchshift.py  vocoder.py
smb/: LICENSE  README  smbPitchShift.cpp  smbPitchShift.h
vcpkg/: portfile.cmake  vcpkg.json
