[metadata]
name = stftpitchshift
version = 1.0
author = Juergen Hock
author_email = juergen.hock@jurihock.de
url = https://github.com/jurihock/stftPitchShift
description = STFT based multi pitch shifting with optional formant preservation in C++ and Python.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
keywords =
    digital
    audio
    signal
    processing
    dasp
    fft
    stft
    pitch
    shifting
    formants
    spectrum
    cepstrum
    algorithms
    analysis
    synthesis
    cpp
    python
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Other Audience
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: C++
    Programming Language :: Python :: 3
    Topic :: Artistic Software
    Topic :: Education
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Analysis
    Topic :: Multimedia :: Sound/Audio :: Sound Synthesis
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries

[options]
package_dir=
    = python
packages = StftPitchShift
python_requires = >=3
install_requires =
    click
    matplotlib
    numpy

[options.entry_points]
console_scripts =
    stftpitchshift = StftPitchShift.main:main
